FIX: footer icons are not aligned/centered correctly
linked to upstream issue #169

--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -9,6 +9,7 @@
     .footer-icons {
         ul {
             list-style: none;
+            margin: 0;
             li {
                 display: inline;
             }
